# real-time-imitation

./: .gitignore  LICENSE  README.md  todo.txt
RobotControllerFrom2108/: .gitignore  CMakeLists.txt  Makefile  README.en.md  README.md  TimeClock.hpp  copylibso.sh  main.cpp
RobotControllerFrom2108/Config/: Delta.json  EDV6007.json  Network.json  NetworkSim.json  Scara.json  SevenAxis.json  SixAxis.json  dragTeachConfigJacob.json
RobotControllerFrom2108/Logs/: target_joints_current_.txt  target_joints_velocity_with_ff.txt
RobotControllerFrom2108/Util/: synctcpserver.hpp
RobotControllerFrom2108/lib/: CMakeLists.txt  main.cpp
RobotControllerFrom2108/lib/config/: config.h  dragTeach_config.json
RobotControllerFrom2108/lib/include/: BaseTypes.hpp  CommandData.hpp  CommandHandler.hpp  Common.hpp  GlobalVars.hpp  HWSensor.hpp  JointsJoystickSolver.hpp  JsonConfigLoader.hpp  Motor.hpp  PathParm.hpp  PoseJoystickSolver.hpp  Robot.hpp  SetJointsSolver.hpp  SetPoseSolver.hpp  SolverBase.hpp  TcpData.hpp  TcpServer.hpp  TeachDragSolver.hpp  TimeClock.hpp
RobotControllerFrom2108/lib/include/Interface/: APIBlock.hpp  CmpRIKApi.h  CmpRIKItf.h
RobotControllerFrom2108/lib/include/PathGenerator/: JPathGenerator.hpp  README.md
RobotControllerFrom2108/lib/include/Robots/: Delta.hpp  Scara.hpp  SevenAxis.hpp  SixAxis.hpp
RobotControllerFrom2108/lib/include/Simulation/: CommandHandlerSim.hpp  TcpServerSim.hpp
RobotControllerFrom2108/lib/src/: CmpRIK.cpp  CommandHandler.cpp  Common.cpp  JointsJoystickSolver.cpp  JsonConfigLoader.cpp  Motor.cpp  PoseJoystickSolver.cpp  Robot.cpp  SetJointsSolver.cpp  SetPoseSolver.cpp  SolverBase.cpp  TcpServer.cpp  TeachDragSolver.cpp
RobotControllerFrom2108/lib/src/Interface/: APIBlock.cpp
RobotControllerFrom2108/lib/src/PathGenerator/: JPathGenerator.cpp
RobotControllerFrom2108/lib/src/Robots/: Delta.cpp  Scara.cpp  SevenAxis.cpp  SixAxis.cpp
RobotControllerFrom2108/lib/src/Simulation/: CommandHandlerSim.cpp  (+1 more)
(+4 files in other folders)
